--- a/src/bibtex.bib
+++ b/src/bibtex.bib
@@ -1,12 +1,12 @@
 @inproceedings{null,
-   author = {dsadsda},
-   title = {sdadssad},
-   booktitle = {saddsad},
-   year = {1212},
+   author = {},
+   title = {},
+   booktitle = {},
+   year = {0},
     volume= {0},
     note= {},
     address= {},
-    pages= {},
+    pages= {null},
     series= {},
     organization= {},
     publisher= {},
