it's possible to name files before downloading them. List also changed to table when listing inproceedings

--- a/src/bibtex.bib
+++ b/src/bibtex.bib
@@ -1,12 +1,12 @@
 @inproceedings{null,
-   author = {},
-   title = {},
-   booktitle = {},
-   year = {0},
+   author = {kjhkjkj},
+   title = {kuikuuiy},
+   booktitle = {uyiuuyiiu},
+   year = {545454},
     volume= {0},
     note= {},
     address= {},
-    pages= {null},
+    pages= {},
     series= {},
     organization= {},
     publisher= {},
