listing created for books and articles

--- a/src/bibtex.bib
+++ b/src/bibtex.bib
@@ -1,14 +1,8 @@
-@inproceedings{null,
-   author = {kjhkjkj},
-   title = {kuikuuiy},
-   booktitle = {uyiuuyiiu},
-   year = {545454},
-    volume= {0},
-    note= {},
-    address= {},
-    pages= {},
-    series= {},
-    organization= {},
-    publisher= {},
-    publishmonth= {0}
+@article{null,
+   author = {sdadsadsa},
+   title = {dsadsa},
+   journal = {sdsadsad},
+   year = {2112},
+note = {},
+pages = {}
 }
