--- a/src/bibtex.bib
+++ b/src/bibtex.bib
@@ -1,8 +1,6 @@
-@article{null,
-   author = {sdadsadsa},
-   title = {dsadsa},
-   journal = {sdsadsad},
-   year = {2112},
-note = {},
-pages = {}
+@inproceedings{null,
+author = {},
+title = {},
+booktitle = {},
+year = {0}
 }
