--- a/src/bibtex.bib
+++ b/src/bibtex.bib
@@ -1,8 +1,12 @@
-@article{null,
-   author = {sdadsadsa},
-   title = {dsadsa},
-   journal = {sdsadsad},
-   year = {2112},
+@inproceedings{null,
+author = {Arton lasit},
+title = {inproceeding},
+booktitle = {booktitle},
+year = {2016},
 note = {},
-pages = {}
+address = {},
+pages = {},
+series = {},
+organization = {},
+publisher = {}
 }
