scandic service part of export service

--- a/src/bibtex.bib
+++ b/src/bibtex.bib
@@ -1,6 +1,6 @@
 @inproceedings{1,
-author = {},
-title = {\"a\"a\"a\"a\"a},
-booktitle = {},
-year = {0}
+author = {Arton lasit},
+title = {inproceeding},
+booktitle = {booktitle},
+year = {2016}
 }
