--- a/src/bibtex.bib
+++ b/src/bibtex.bib
@@ -1,6 +1,6 @@
-@inproceedings{1,
-author = {Arton lasit},
-title = {inproceeding},
-booktitle = {booktitle},
-year = {2016}
+@book{1,
+author = {\"a\"a\"a\"a \"o\"o, \aa\aa \"o\"o\"a\"a\"o, timber},
+title = {\"o\"o \"a\"a \"o\"o\"a \"o\"a \"o\"a \"o\"a\"o \"a\"o \aa\"o \"o\"a\aa  \"o \"a\"a\aa \"o\aa \"o\"a\aa \"o\"a\aa\"o \"a\aa\"o \aa\"o \"a\aa\"o\"a\aa \"o},
+publisher = {},
+year = {0}
 }
